// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add GraphqlController metadata to a class when decorated with @GraphqlController() 1`] = `
Object {
  "graphqlFiles": Array [],
  "schema": Array [],
}
`;

exports[`should add GraphqlController metadata to a class when decorated with @GraphqlController({graphqlFiles, schema}) 1`] = `
Object {
  "graphqlFiles": Array [
    "<PROJECT_ROOT>/__tests__/decorator/photo/photo.gql",
  ],
  "schema": Array [
    "
type Hero {
  id: Int!

  name: String!

  power: String!

  amountPeopleSaved: Int!
}

input HeroInput {
  name: String!

  power: String!

  amountPeopleSaved: Int!
}

type HeroPage {
  items: [Hero]
  totalCount: Int
}

type Query {
  heroes: [Hero]
  getPageOfHeroes(page: Int, perPage: Int, sortField: String, sortOrder: String, filter: String): HeroPage
}

type Mutation {
  submitHero(heroInput: HeroInput!): Hero
}
",
  ],
}
`;

exports[`should add GraphqlController metadata to a class when decorated with @GraphqlController({graphqlFiles: absolute}) 1`] = `
Object {
  "graphqlFiles": Array [
    "<PROJECT_ROOT>/__tests__/decorator/photo/hero.gql",
    "<PROJECT_ROOT>/__tests__/decorator/photo/photo.gql",
  ],
  "schema": Array [],
}
`;

exports[`should add GraphqlController metadata to a class when decorated with @GraphqlController({graphqlFiles: relative, pwd}) 1`] = `
Object {
  "graphqlFiles": Array [
    "<PROJECT_ROOT>/__tests__/photo/hero.gql",
    "<PROJECT_ROOT>/__tests__/photo/photo.gql",
  ],
  "schema": Array [],
}
`;

exports[`should add GraphqlController metadata to a class when decorated with @GraphqlController({graphqlFiles: relative}) 1`] = `
Object {
  "graphqlFiles": Array [
    "<PROJECT_ROOT>/__tests__/decorator/photo/hero.gql",
    "<PROJECT_ROOT>/__tests__/decorator/photo/photo.gql",
  ],
  "schema": Array [],
}
`;

exports[`should add GraphqlController metadata to a class when decorated with @GraphqlController({schema}) 1`] = `
Object {
  "graphqlFiles": Array [],
  "schema": Array [
    "
type Photo {
  id: Int!

  name: String!

  description: String!

  fileName: String!

  views: Int!

  isPublished: Boolean!
}

input PhotoInput {
  name: String!

  description: String!

  fileName: String!

  views: Int!

  isPublished: Boolean!
}

type PhotoPage {
  items: [Photo]
  totalCount: Int
}

type Query {
  photos: [Photo]
  getPageOfPhotos(page: Int, perPage: Int, sortField: String, sortOrder: String, filter: String): PhotoPage
}

type Mutation {
  submitPhoto(photoInput: PhotoInput!): Photo
}
",
    "
type Hero {
  id: Int!

  name: String!

  power: String!

  amountPeopleSaved: Int!
}

input HeroInput {
  name: String!

  power: String!

  amountPeopleSaved: Int!
}

type HeroPage {
  items: [Hero]
  totalCount: Int
}

type Query {
  heroes: [Hero]
  getPageOfHeroes(page: Int, perPage: Int, sortField: String, sortOrder: String, filter: String): HeroPage
}

type Mutation {
  submitHero(heroInput: HeroInput!): Hero
}
",
  ],
}
`;
